cmake_minimum_required(VERSION 3.26.4 FATAL_ERROR)

project(DRHI)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/)
set(PROJECT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Sources/Include)
set(THIRD_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)

add_subdirectory(ThirdParty)
add_subdirectory(Sources)

set(LIBRARY_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/drhi)

#将include文件导出到库目录
file(COPY ${PROJECT_INCLUDE_DIR} DESTINATION ${LIBRARY_OUT_DIR})
